Fixed circle-bg z-index

--- a/less/circle-background.less
+++ b/less/circle-background.less
@@ -9,6 +9,7 @@
 
 .circle-bg {
   position: relative;
+  z-index: 0;
 
   &:before {
     content: "";
@@ -121,9 +122,4 @@
   &:before {
     background: @brand-navy-minus-20;
   }
-}
-
-.low-z-index{
-  position: relative;
-  z-index: -1;
 }
